# PrivateMesh

./: .env.example  .gitignore  Cargo.toml  Dockerfile.service  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci-docker.yml  ci-rust.yml  ci-web.yml  release-android.yml  release-apple.yml  release-linux.yml  release-windows.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: next.config.js
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  passkey.rs  session.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  pool.rs
crates/domain/: Cargo.toml
crates/domain/src/: ids.rs  lib.rs  telemetry.rs  types.rs
crates/relay-protocol/: Cargo.toml
crates/relay-protocol/src/: envelope.rs  lib.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: fixtures.rs  lib.rs
docs/api/: openapi.yaml
docs/architecture/: overview.md
docs/plansforwork/: 2026-04-09-mobile-modularization-plan.md
docs/product/: personas.md
docs/security/: threat-model.md
infra/compose/: docker-compose.yml
plans/: ui-review-brutal.md
services/control-api/: Cargo.toml
services/control-api/src/: main.rs
services/directory-ca/: Cargo.toml
services/directory-ca/src/: main.rs
services/media-worker/: Cargo.toml
services/media-worker/src/: main.rs
services/push-worker/: Cargo.toml
services/push-worker/src/: main.rs
services/realtime-gateway/: Cargo.toml
services/realtime-gateway/src/: main.rs
services/relay-gateway/: Cargo.toml
services/relay-gateway/src/: main.rs
