[package]
name = "privatemesh-test-support"
description = "Test fixtures, factories, and in-process database helpers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
tokio = { workspace = true }

[dependencies]
privatemesh-domain = { workspace = true }
privatemesh-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
