[package]
name = "relay-gateway"
description = "Inter-operator federation relay endpoint"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "relay-gateway"
path = "src/main.rs"

[dependencies]
privatemesh-domain = { workspace = true }
privatemesh-db = { workspace = true }
privatemesh-relay-protocol = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
