[package]
name = "privatemesh-desktop"
description = "PrivateMesh Tauri shell for Windows, Linux, macOS, Android, and iPhone packaging"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "privatemesh_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "privatemesh-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
tauri = { version = "2.10.3" }
url = "2.5.7"
